[TECH] Sonar servlet